--- a/flask/app/templates/director.html
+++ b/flask/app/templates/director.html
@@ -21,5 +21,9 @@
 		<p>Выберите класс:</p>
 		<select id="sel_cl" name="cl"></select>
 	</div>
+	<div id="add_person">
+		<button id="add_field">Добавить поле</button>
+		<button id="save_fields">Сохранить</button>
+	</div>
 </body>
 </html>
