--- a/flask/app/templates/registration.html
+++ b/flask/app/templates/registration.html
@@ -13,7 +13,7 @@
 		<div id="textlog">
 		<p class="clearfix">
 	        <div id="reg_block">
-	        <input type="text" name="name" id="name" placeholder="Имя" onclick="refresh()">
+	        <input type="text" name="name" id="invite" placeholder="Пригласительный" onclick="refresh()">
 	    	</div>
 	    </p>
 	    <p class="clearfix">
@@ -24,16 +24,6 @@
 	    <p class="clearfix">
 	        <div id="password_block">
 	        <input type="password" name="password" id="password" placeholder="Пароль" onclick="refresh()">
-	    	</div>
-	    </p>
-	    <p class="clearfix">
-	        <div id="school_block">
-	        <input type="text" name="name" id="school" placeholder="Школа" onclick="refresh()">
-	    	</div>
-	    </p>
-	    <p class="clearfix">
-	        <div id="class_block">
-	        <input type="text" name="name" id="classs" placeholder="Класс" onclick="refresh()">
 	    	</div>
 	    </p>
 		</div>
