--- a/flask/app/static/demo.css
+++ b/flask/app/static/demo.css
@@ -16,7 +16,23 @@ h2 {
 p {
 	margin: 0.5em;	
 }
+#header {
+  position: absolute;
+  width: 100%;
+  height: 75px;
+  top: 0px;
+  left: 0px;
+  background-color: #09504f;
+  display: inline-block;
+  overflow:hidden;
 
+  color: #fff;
+}
+.hd {
+	float: left; 
+	margin: 10px;
+	margin-top: 40px;
+}
 .ui-widget {
 	font-size: 1em;	
 }
@@ -27,25 +43,16 @@ p {
 }
 
 #left {
-	top: 100px;
+	top: 150px;
 	position: absolute;
 	left: 0px;
 	width: 10%;
 	height: 100%;
 }
-#about_button_container {
-	position: absolute;
-	top: 1em;
-	right: 1em;	
-	padding: 0.5em 2em;
-	background: #ddf;
-	border: 1px solid #bbd;
-	width: 10em;
-	text-align: center;
-}
 #calendar {
 	left: 10%;
 	position: absolute;
+	top: 90px;
 	width: 90%;
 }
 
@@ -88,4 +95,7 @@ ul.formatted li {
 
 ol.formatted li {
 	list-style-type: decimal;
+}
+.user_info {
+	display: none;
 }
