--- a/flask/app/static/directorstyle.css
+++ b/flask/app/static/directorstyle.css
@@ -23,15 +23,6 @@ p {
   top: 0px;
   left: 0px;
   background-color: #09504f;
-  display: inline-block;
-  overflow:hidden;
-
-  color: #fff;
-}
-.hd {
-	float: left; 
-	margin: 10px;
-	margin-top: 40px;
 }
 .ui-widget {
 	font-size: 1em;	
@@ -51,7 +42,15 @@ p {
 	width: 10%;
 	height: 100%;
 }
-
+#comment {
+	
+}
+#calendar {
+	left: 10%;
+	position: absolute;
+	top: 90px;
+	width: 90%;
+}
 
 .wc-header td {
 	background: url(images/header-bg.png) repeat-x;
@@ -98,7 +97,6 @@ ol.formatted li {
 td {
 	border: 1px solid black;
 	padding: 10px;
-	text-align: center;
 }
 table {
     width: 100%;
@@ -108,23 +106,47 @@ th {
     left: 0;
     width: 200px;
     border: 1px solid black;
-    padding: 10px;
 }
 .outer {
-    position: relative;
+    position: relative
 }
 .inner {
     overflow-x: scroll;
     overflow-y: visible;
-    width: calc(100% - 200px);
+    width: 400px;
     margin-left: 202px;
 }
 .user_info {
 	display: none;
 }
-#content {
+.menu {
 	position: absolute;
 	top: 90px;
-	width: 100%;
-	height: 100%;
+	left: 15px;
+	width: 350px;
+	height: calc(100% - 90px);
+}
+.content {
+	position: absolute;
+	top: 90px;
+	left: 350px;
+	width: calc(100% - 350px);
+	height: calc(100% - 90px);
+}
+#header {
+  position: absolute;
+  width: 100%;
+  height: 75px;
+  top: 0px;
+  left: 0px;
+  background-color: #09504f;
+  display: inline-block;
+  overflow:hidden;
+
+  color: #fff;
+}
+.hd {
+	float: left; 
+	margin: 10px;
+	margin-top: 40px;
 }
