--- a/flask/app/templates/dnevnik.html
+++ b/flask/app/templates/dnevnik.html
@@ -12,10 +12,23 @@
 </head>
 <body>
 	
-	<div id="header"></div>
-	<div id="journal"></div>
-	<div id="comment">
-		<div id="contentholder"></div>
+	<div id="header">
+		<div class="hd" id="cal_panel">Календарь</div>
+		<div class="hd" id="admin_panel" style="display: none;">Панель директора</div>
+		<div class="hd" id="pupil_page" style="display: none;">Оценки</div>
+	</div>
+	<div id="content">
+		<div id="journal"></div>
+		<div id="comment">
+			<div id="contentholder"></div>
+		</div>
+		<div class="user_info">
+	    	<div id="school_info">{{ school }}</div>
+	    	<div id="login_info">{{ login }}</div>
+	    	<div id="name_info">{{ username }}</div>
+	    	<div id="admin">{{ admin }}</div>
+	    	<div id="pupil">{{ pupil }}</div>
+	    </div>  
 	</div>
 </body>
 </html>
