--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN""http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
-	<title>{{ title }}</title>
+	<title>Календарь</title>
 	<link rel='stylesheet' type='text/css' href='{{ url_for('static', filename='reset.css') }}' />
     <!--
 	<link rel='stylesheet' type='text/css' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/start/jquery-ui.css' />
@@ -25,6 +25,11 @@
 
 </head>
 <body> 
+	<div id="header">
+		<div class="hd" id="cal_panel">Календарь</div>
+		<div class="hd" id="admin_panel" style="display: none;">Панель директора</div>
+		<div class="hd" id="pupil_page" style="display: none;">Оценки</div>
+	</div>
 	<div id = "left">
 		<button type="button" id="add_filtr">Добавить фильтр</button>
 		<form name="checkfiltr" id="checking"></form>
@@ -36,11 +41,7 @@
 	<div id="user_name"> 
 		{{ username }}
 	</div>
-	<div id="login"> {{ login }} </div>
-	<h1>jQuery Week Calendar (full demo)</h1>
-	<div id="about_button_container">
-		<button type="button" id="about_button">About this demo</button>
-	</div>
+
 	<div id='calendar'></div>
 	<div id="event_edit_container">
 		<form>
@@ -67,38 +68,12 @@
 			</ul>
 		</form>
 	</div>
-
-	<div id="about">
-		<h2>Summary</h2>
-		<p>
-			This calendar implementation demonstrates further usage of the calendar with editing and deleting of events. 
-			It stops short however of implementing a server-side back-end which is out of the scope of this plugin. It 
-			should be reasonably evident by viewing the demo source code, where the points for adding ajax should be. 
-			Note also that this is **just a demo** and some of the demo code itself is rough. It could certainly be 
-			optimised.
-		</p>
-		<p>
-			***Note: This demo is straight out of SVN trunk so may show unreleased features from time to time.
-		</p>
-		<h2>Demonstrated Features</h2>
-		<p>
-			This calendar implementation demonstrates the following features:
-		</p>
-		<ul class="formatted">
-			<li>Adding, updating and deleting of calendar events using jquery-ui dialog. Also includes 
-				additional calEvent data (body field) not defined by the calEvent data structure to show the storage 
-				of the data within the calEvent</li>
-			<li>Dragging and resizing of calendar events</li>
-			<li>Restricted timeslot rendering based on business hours</li>
-			<li>Week starts on Monday instead of the default of Sunday</li>
-			<li>Allowing calEvent overlap with staggered rendering of overlapping events</li>
-			<li>Use of the 'getTimeslotTimes' method to retrieve valid times for a given event day. This is used to populate
-				select fields for adding, updating events.</li>
-			<li>Use of the 'eventRender' callback to add a different css class to calEvents in the past</li>
-			<li>Use of additional calEvent data to enforce readonly behaviour for a calendar event. See the event
-				titled "i'm read-only"</li>
-		</ul>
-	</div>
-	
+	<div class="user_info">
+    	<div id="school_info">{{ school }}</div>
+    	<div id="login_info">{{ login }}</div>
+    	<div id="name_info">{{ username }}</div>
+    	<div id="admin">{{ admin }}</div>
+    	<div id="pupil">{{ pupil }}</div>
+    </div>   
 </body>
 </html>
